переписан  switch для версии jdk 11 и закомментирована аннтоация @Serial